# TalkBut

./: .env.example  .gitignore  CHANGELOG.md  README.md  idea.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.hypothesis/constants/: 00f7d370e0f2a334  094d54c7fd7ff462  11f0a707e5d4da6e  281a526679b4540f  2a7c1b300aca0b99  3be36e8bd2b6c35b  3d988abe7edfe234  525884b37a8e5bcf  6e6a7ca644f9a0bc  873a91eef670e587  87c77484d8c91cf2  913ab3f9c36ebcb4  97ebda51b564cba9  9fdaf862be031ff0  a0dbe4cdba2d1a40  ab0c7811b3e713ca  b187bba9dfe9ebe4  b389cab155905d6d  bda4d1943b559ef9  da39a3ee5e6b4b0d  dfa117d9a1bc4cd5  e67e3171de3a688f  fdc70e65ae210760  ff1e5b00dd9d646f
.hypothesis/examples/04e6b3400353b141/: 0a9d22a4d019a0e3  11b4ba547b5af00a  62e46e061d72f39e  66a719dc58e33298  8d3ffd111102f095  9e11dadb065dfa07  a51930b7bbe0b0fa  a8e390dcbfbe74dc  f727177c3f1af60a  f7b65a3eb287e09e
.hypothesis/examples/0a9d22a4d019a0e3/: 1c56a7cf2808d856  2230c2aa9cae58f6  25454ad2ca07f9e1  320c28f7069e7337  487396862697053b  7052ce8f9b0651d0  9bb00c76a2c7b210  a1b5349f2ae2f02f  c3815d6d00d3308d  d830cedc336a58b4  ed12fbe76a020c28
.hypothesis/examples/62e46e061d72f39e/: e0d898d83040d9a0
.hypothesis/examples/66a719dc58e33298/: daa3f68d465d411e
config/: config.yaml  config.yaml.example
config/prompts/: analysis_prompt.txt  report_prompt.txt
docs/: LOG_COMMAND.md  architecture_mvp.md
src/talkbut/: __main__.py
tests/: conftest.py  manual_test_ai.py  manual_test_git.py  test_ai_analyzer.py  test_automated_runner.py  test_batch_summary_accuracy_property.py  test_config.py  test_config_preservation_property.py  test_cron_scheduler_property.py  test_date_range_expansion_property.py  test_error_history_property.py  test_error_log_format_property.py  test_existing_log_detection_property.py  test_formatter.py  test_git_collector.py  test_models.py  test_parser.py  test_scheduler_manager_property.py  test_status_accuracy_property.py  test_status_tracking.py  test_storage.py  test_task_scheduler_property.py  test_validators_property.py
(+55 files in other folders)
